--- a/akracourse/app/views/articles/_form.html.erb
+++ b/akracourse/app/views/articles/_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_for @article do |f| %>
   <% if @article.errors.any? %>
+  <h1><%= @article.errors.inspect %> </h1>
     <div id = "error_explanation">
       <h2>
         <%= pluralize(@article.errors.count, "error") %>
