--- a/akracourse/app/views/articles/index.html.erb
+++ b/akracourse/app/views/articles/index.html.erb
@@ -15,7 +15,7 @@
         <tr>
             <td>    <%=link_to article.title, article_path(article) %> </td>
             <td> <%= link_to 'edit', edit_article_path(article) %> </td>
-            <td> <%= link_to 'Destroy', article_path(@article),
+            <td> <%= link_to 'Destroy', article_path(article),
               method: :delete,
               data: { confirm: 'Are you sure?' } %> </td>
         </tr>
