--- a/akracourse/app/views/articles/_form.html.erb
+++ b/akracourse/app/views/articles/_form.html.erb
@@ -7,7 +7,7 @@
         prohibited this article from being saved:
       </h2>
       <ul>
-        <%= @article.errors.full_messages.each do |msg| %>
+        <% @article.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
         <%end%>
       </ul>
