--- a/akracourse/app/assets/stylesheets/application.css
+++ b/akracourse/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+.alert{
+    background-color: orange;
+    border: 1px;
+    padding: 10px;
+    margin-bottom: 10px;
+    color: #fff;
+}
