--- a/akracourse/app/views/articles/index.html.erb
+++ b/akracourse/app/views/articles/index.html.erb
@@ -7,7 +7,7 @@
     <thead>
         <tr>
             <th>Tytuł</th>
-            <th>Akcje</th>
+            <th colspan="2">Akcje</th>
         </tr>
     </thead>
     <tbody>
